--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ body {
   width: 100%;
   padding-bottom: 50px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   transition: opacity 0.3s, visibility 0.3s;
 }
 @media (min-width: 840px) {
