--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,19 +94,9 @@ body {
   position: absolute;
   top: 0;
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-  z-index: 0;
-  pointer-events: none;
-}
-.c
-{
-  position: absolute;
-  top: 0;
-  width: 100%;
+  padding-bottom: 50px;
   display: flex;
   justify-content: center;
-  z-index: 100;
 }
 
 @media (min-width: 840px) {
